# novstash-ui

./: .gitignore  .gitmodules  README.md  biome.json  bts.jsonc  local.db  package.json  tsconfig.json  turbo.json
apps/novstash-cli/: Makefile  README.md  pyproject.toml
apps/novstash-cli/src/novstash_cli/: __init__.py  __main__.py  cli.py  db.py  models.py  utils.py
apps/novstash-cli/src/novstash_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/novstash-cli/src/novstash_cli/scrapers/: __init__.py  royalroad.py
apps/novstash-cli/tests/: __init__.py  test_db.py
apps/scrape-server/: main.py  pyproject.toml
apps/web/: .env.example  .gitignore  nuxt.config.ts  package.json
apps/web/app/: app.config.ts  app.vue
apps/web/app/assets/css/: main.css
apps/web/app/components/: ChapterDrawer.vue  ChapterList.vue  Header.vue  KeyboardShortcutsModal.vue  NovelCard.vue  Pagination.vue
apps/web/app/components/novels/: ChapterList.vue  NovelCard.vue  NovelGrid.vue
apps/web/app/composables/: useAdminNovels.ts  useChapter.ts  useChapterList.ts  useChapterPrefetch.ts  useDebouncedWatch.ts  useGenres.ts  useMarkdown.ts  useNovel.ts  useNovelSearch.ts  useNovels.ts  useReaderSettings.ts  useReadingHistory.ts  useReadingProgress.ts  useScrollMemory.ts  useUser.ts
apps/web/app/layouts/: admin.vue  default.vue
apps/web/app/middleware/: admin.auth.ts
apps/web/app/pages/: index.vue  library.vue  search.vue
apps/web/app/pages/admin/: index.vue  novels.vue  users.vue
apps/web/app/pages/novels/: [id].vue
apps/web/app/types/: library.ts  novel.ts
apps/web/composables/: useChapter.ts  useReaderSettings.ts
apps/web/server/api/: genres.get.ts  novels.get.ts
apps/web/server/api/admin/: novels.get.ts  novels.post.ts  users.get.ts
apps/web/server/api/novels/: [id].get.ts  search.get.ts
apps/web/server/api/reading/: progress.post.ts  recent.get.ts
apps/web/server/utils/: admin.ts
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
(+15 files in other folders)
