[project]
name = "novstash-cli"
version = "0.1.0"
description = "CLI tool for downloading and managing web novels into the novstash local database"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "novstash contributors" },
]

dependencies = [
    "httpx>=0.28,<1",
    "beautifulsoup4>=4.13,<5",
    "typer>=0.15,<1",
    "pydantic>=2.11,<3",
    "rich>=13.9,<14",
]

[project.urls]
Homepage = "https://github.com/novstash/novstash-ui"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["novstash_cli*"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[project.scripts]
novstash = "novstash_cli.cli:app"
