[project]
name = "scrape-server"
version = "0.1.0"
description = "FastAPI sidecar for running novel scrapes outside the Nuxt process"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "selectolax>=0.3",
    "html2text>=2024",
    "pydantic>=2.10",
    "tenacity>=9",
    "rich>=13",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
